click sound added

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
   <body>
     <div class="counter-container">
       <h1 id="counter">0</h1>
-      <button id="decrement">-</button>
-      <button id="increment">+</button>
-      <button id="reset">Reset</button>
-      <button id="double">Double</button>
+      <button class="btn-sound" id="decrement">-</button>
+      <button class="btn-sound" id="increment">+</button>
+      <button class="btn-sound" id="reset">Reset</button>
+      <button class="btn-sound" id="double">Double</button>
     </div>
     <script src="script.js"></script>
   </body>
